save responce in txt file, if connection is lost

--- a/style.css
+++ b/style.css
@@ -24,3 +24,10 @@
     text-align: left;
     display: table-cell;
 }
+
+.xsmallMensa {
+  font-size: 17px;
+  line-height: 17px;
+  font-weight: 900;
+}
+
