--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     width: 150px;
     text-align: left;
     display: table-cell;
+	
 }
 
 .valuecellMensa{
@@ -29,5 +30,6 @@
   font-size: 15px;
   line-height: 17px;
   font-weight: 900;
+  color: #fff
 }
 
